Fixed nav aligning, updated personal page styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,7 @@ background-color: black;
     list-style: none;
     justify-content: space-around;
     width: 100%;
+    margin: auto;
 }
 
 nav {
